--- a/nodeapp-express/views/404.ejs
+++ b/nodeapp-express/views/404.ejs
@@ -1,8 +1,7 @@
 <% include partials/header %>
 <div style="text-align:center">
-  <h1><span style="color:#19B5FE;font-size:60pt">:( Uh oh ):</span></h1>
-    <div class="parallax-wrapper">
-        <div class="parallax-container" style="text-align:center">
+  <h1><span style="color:#19B5FE;font-size:60pt">:( Uh oh ):</span></h1><br/>
+  <h1><span style="color:#ccc;font-size:20pt">404 :  Page Not Found!</span></h1>
         <table style="margin:0 auto" border="0">
           <tr>
             <td>
@@ -15,15 +14,7 @@
               <img src="https://media1.tenor.com/images/8ae144ed315da183e826c10c9da2bf22/tenor.gif?itemid=7925352" height="133%"/>
             </td>
           </tr>
-          <tr>
-            <td colspan="3">
-            <br/>
-            <h1><span style="color:#ccc;font-size:20pt">404 :  Page Not Found!</span></h1>
-          </td>
-          </tr>
         </table>
       </div>
-    </div>
-  </div>
-</div>
+
 <% include partials/footer %>
