--- a/nodeapp-express/views/index.ejs
+++ b/nodeapp-express/views/index.ejs
@@ -1,5 +1,6 @@
 <% include partials/header %>
 <h1>Web App Login</h1><br/>
+<h1>Web App Login</h1><br/>
 <%- messages('messages',locals) %>
 <% if(errors){%>
     <% errors.forEach(function(error){ %>
